--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
           <title>BGBU RMR</title>
           <link rel="stylesheet" href="compiled\flipclock.css">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-          <link rel="stylesheet" href="E:\Users\callos\Documents\GitHub\BGBU\rmr site\bgbu_rmr\styles.css">
+          <link rel="stylesheet" href="styles.css">
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
           <script src="compiled\flipclock.js"></script>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+          <!-- <link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css'> -->
+
+          <link rel="stylesheet" href="style.css">
      </head>
      <body>
           <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -18,7 +23,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                    <li><a href="#">HOME</a></li>
-                   <li><a href="#">SCHEDULE</a></li>
+                   <li><a href="#timeline1">SCHEDULE</a></li>
                    <li><a href="#">SPEAKERS</a></li>
                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -86,7 +91,7 @@
           </div>
 
 
-          <div class="jumbotron" style="padding-top: 1px">
+          <div class="jumbotron" style="padding-top: 40px">
                <div class="container" style="text-align:center;">
                     <h2 class='text'>COUNTDOWN BEFORE THE MEETING:</h2>
 
@@ -122,6 +127,211 @@
           responsive, mobile-first projects on the web.</p> -->
                </div>
           </div>
+
+<!-- SCHEDULE -->
+<div class="container" id='timeline1'>
+  <div class="page-header">
+    <h1 id="timeline">Schedule</h1>
+    <h3 id="timeline">December 5, 2017 (Day 1)</h3>
+  </div>
+  <ul class="timeline">
+    <li>
+      <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Power Plant / FCRS Update</h4>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 10:00 am December 5, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> Lemuel Mendiola</small></p>
+        </div>
+        <div class="timeline-body">
+          <p></p>
+        </div>
+      </div>
+    </li>
+
+<!-- GEOCHEM -->
+    <li class="timeline-inverted">
+      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+        <div class="timeline-heading ">
+          <h3 class="timeline-title"><em>Geochemistry</em></h3>
+        </div>
+      </div>
+    </li>
+
+    <li class="timeline-inverted">
+      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Reservoir Geochemistry and NDS Tracer Update</h4>
+        </div>
+        <div class="timeline-body">
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:00 to 10:45 am December 5, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> CMR Espartinez </small></p>
+        </div>
+      </div>
+    </li>
+    <li class="timeline-inverted">
+      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">CN-3D Chemistry Update</h4>
+        </div>
+        <div class="timeline-body">
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:45 to 11:15 am December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> PB Alvarado</small></p>
+        </div>
+      </div>
+    </li>
+    <li class="timeline-inverted">
+      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Process Geochemistry Update</h4>
+        </div>
+        <div class="timeline-body">
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 11:45 am December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MM Bibon </small></p>
+        </div>
+      </div>
+    </li>
+
+<!-- RESERVOIR ENGINEERING  -->
+    <li class="timeline-badge">
+      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+        <div class="timeline-heading ">
+          <h3 class="timeline-title"><em>Reservoir Engineering</em></h3>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="timeline-badge info"><i class="glyphicon glyphicon-home"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Bacman Steam and Injection Capacity Update</h4>
+        </div>
+        <div class="timeline-body">
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 1:00 to 2:00 pm December 5, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> DB Gamez </small></p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="timeline-badge info"><i class="glyphicon glyphicon-home"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Bacman Reservoir Simulation Update</h4>
+        </div>
+        <div class="timeline-body">
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2:00 to 3:00 pm December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> JD Villacorte / RN Colina </small></p>
+        </div>
+      </div>
+    </li>
+
+<!-- WELL TEST AND MEASUREMENT -->
+     <li class="timeline-inverted">
+      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+         <div class="timeline-heading ">
+           <h3 class="timeline-title"><em>Well Test and Measurement</em></h3>
+         </div>
+      </div>
+     </li>
+     <li class="timeline-inverted">
+      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+         <div class="timeline-heading">
+           <h4 class="timeline-title">WTM Projects Update</h4>
+         </div>
+         <div class="timeline-body">
+              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3:00 to 4:00 pm December 5, 2017</small></p>
+              <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> GS Vergara / NM Avila</small></p>
+         </div>
+      </div>
+     </li>
+  </ul>
+</div>
+
+<!-- DAY 2 -->
+<div class="container">
+  <div class="page-header">
+    <h3 id="timeline">December 6, 2017 (Day 2)</h3>
+  </div>
+
+<!-- BACMAN 1.5 -->
+  <ul class="timeline">
+       <li class="timeline-badge">
+        <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+          <div class="timeline-heading ">
+            <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
+          </div>
+        </div>
+      </li>
+    <li>
+      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Bacman 1.5 Project Update</h4>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 10:00 am December 6, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Garcia </small></p>
+        </div>
+        <div class="timeline-body">
+          <p></p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Silica Screening Test for BacMan 1.5</h4>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:00 to 11:00 am December 6, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MES Ramos </small></p>
+        </div>
+        <div class="timeline-body">
+          <p></p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Binary Evaluation Support (Geothermex Engagement) </h4>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:00 to 12:00 nn December 6, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> DMR Sunga </small></p>
+        </div>
+        <div class="timeline-body">
+          <p></p>
+        </div>
+      </div>
+    </li>
+
+<!-- GEOLOGY -->
+    <li class="timeline-inverted">
+      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+        <div class="timeline-heading ">
+          <h3 class="timeline-title"><em>Geology</em></h3>
+        </div>
+      </div>
+    </li>
+
+    <li class="timeline-inverted">
+      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">A structural perspective on the NDS Tracer Test in BGBU</h4>
+        </div>
+        <div class="timeline-body">
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 1:00 to 2:00 pm December 6, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
+        </div>
+      </div>
+    </li>
+
+
+  </ul>
+</div>
+<!-- END of SCHEDULE -->
 
           <nav class="navbar navbar-inverse navbar-fixed-bottom">
                <div class="container-fluid" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
