revised WTM sched

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="timeline-heading">
           <h4 class="timeline-title">Power Plant / FCRS Update</h4>
           <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 10:00 am December 5, 2017</small></p>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> Lemuel Mendiola</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> RO Alamer / LS Mendiola</small></p>
         </div>
         <div class="timeline-body">
           <p></p>
@@ -228,26 +228,27 @@
       </div>
     </li>
 
-<!-- WELL TEST AND MEASUREMENT -->
-     <li class="timeline-inverted">
-      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-         <div class="timeline-heading ">
-           <h3 class="timeline-title"><em>Well Test and Measurement</em></h3>
-         </div>
-      </div>
-     </li>
-     <li class="timeline-inverted">
-      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-         <div class="timeline-heading">
-           <h4 class="timeline-title">WTM Projects Update</h4>
-         </div>
-         <div class="timeline-body">
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3:00 to 4:00 pm December 5, 2017</small></p>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> GS Vergara / NM Avila</small></p>
-         </div>
-      </div>
-     </li>
+<!-- GEOLOGY -->
+   <li class="timeline-inverted">
+     <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+       <div class="timeline-heading ">
+         <h3 class="timeline-title"><em>Geology</em></h3>
+       </div>
+     </div>
+   </li>
+
+   <li class="timeline-inverted">
+     <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+     <div class="timeline-panel">
+       <div class="timeline-heading">
+         <h4 class="timeline-title">A Structural Perspective on the NDS Tracer Test in BGBU</h4>
+       </div>
+       <div class="timeline-body">
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3:00 to 4:00 pm December 6, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
+       </div>
+     </div>
+   </li>
   </ul>
 </div>
 
@@ -306,39 +307,37 @@
       </div>
     </li>
 
-<!-- GEOLOGY -->
+<!-- WELL TEST AND MEASUREMENT -->
     <li class="timeline-inverted">
-      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+     <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
         <div class="timeline-heading ">
-          <h3 class="timeline-title"><em>Geology</em></h3>
+          <h3 class="timeline-title"><em>Well Test and Measurement</em></h3>
         </div>
-      </div>
+     </div>
     </li>
-
     <li class="timeline-inverted">
-      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
+     <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
+     <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">A structural perspective on the NDS Tracer Test in BGBU</h4>
+          <h4 class="timeline-title">WTM Projects Update</h4>
         </div>
         <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 1:00 to 2:00 pm December 6, 2017</small></p>
-             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 1:00 to 2:00 pm December 5, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> GS Vergara / NM Avila</small></p>
         </div>
-      </div>
+     </div>
     </li>
-
 
   </ul>
 </div>
 <!-- END of SCHEDULE -->
 
-          <nav class="navbar navbar-inverse navbar-fixed-bottom">
+          <!-- <nav class="navbar navbar-inverse navbar-bottom">
                <div class="container-fluid" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
                     <div class="navbar-header" >
                          <p style="color:white;">All Rights Reserved</p>
                     </div>
                </div>
-          </nav>
+          </nav> -->
      </body>
 </html>
