--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <!-- SCHEDULE -->
 <div class="container" id='timeline1'>
   <div class="page-header">
-    <h1 id="timeline">Schedule</h1>
+    <h1 id="timeline">SCHEDULE</h1>
     <h3 id="timeline">December 5, 2017 (Day 1)</h3>
   </div>
   <ul class="timeline">
@@ -140,7 +140,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">Power Plant / FCRS Update</h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 10:00 am December 5, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 9:45 am December 5, 2017</small></p>
           <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> RO Alamer / LS Mendiola</small></p>
         </div>
         <div class="timeline-body">
@@ -165,7 +165,7 @@
           <h4 class="timeline-title">Reservoir Geochemistry and NDS Tracer Update</h4>
         </div>
         <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:00 to 10:45 am December 5, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:45 to 10:30 am December 5, 2017</small></p>
              <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> CMR Espartinez </small></p>
         </div>
       </div>
@@ -177,7 +177,7 @@
           <h4 class="timeline-title">CN-3D Chemistry Update</h4>
         </div>
         <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:45 to 11:15 am December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:30 to 11:15 am December 5, 2017</small></p>
             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> PB Alvarado</small></p>
         </div>
       </div>
@@ -189,7 +189,7 @@
           <h4 class="timeline-title">Process Geochemistry Update</h4>
         </div>
         <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 11:45 am December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 12:00 nn December 5, 2017</small></p>
             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MM Bibon </small></p>
         </div>
       </div>
@@ -215,18 +215,6 @@
         </div>
       </div>
     </li>
-    <li>
-      <div class="timeline-badge info"><i class="glyphicon glyphicon-home"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Bacman Reservoir Simulation Update</h4>
-        </div>
-        <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2:00 to 3:00 pm December 5, 2017</small></p>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> JD Villacorte / RN Colina </small></p>
-        </div>
-      </div>
-    </li>
 
 <!-- GEOLOGY -->
    <li class="timeline-inverted">
@@ -244,11 +232,32 @@
          <h4 class="timeline-title">A Structural Perspective on the NDS Tracer Test in BGBU</h4>
        </div>
        <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3:00 to 4:00 pm December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2:00 to 3:00 pm December 5, 2017</small></p>
             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
        </div>
      </div>
    </li>
+<!-- Bacman-1.5 -->
+   <li class="timeline-badge">
+        <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+             <div class="timeline-heading ">
+                  <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
+             </div>
+        </div>
+   </li>
+  <li>
+   <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
+   <div class="timeline-panel">
+      <div class="timeline-heading">
+        <h4 class="timeline-title">Bacman 1.5 Project Update</h4>
+        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3:00 to 4:00 pm December 5, 2017</small></p>
+        <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Garcia </small></p>
+      </div>
+      <div class="timeline-body">
+        <p></p>
+      </div>
+   </div>
+  </li>
   </ul>
 </div>
 
@@ -260,32 +269,19 @@
 
 <!-- BACMAN 1.5 -->
   <ul class="timeline">
-       <li class="timeline-badge">
-        <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-          <div class="timeline-heading ">
-            <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
+     <li class="timeline-badge">
+          <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+               <div class="timeline-heading ">
+                    <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
+               </div>
           </div>
-        </div>
-      </li>
-    <li>
-      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Bacman 1.5 Project Update</h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 10:00 am December 6, 2017</small></p>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Garcia </small></p>
-        </div>
-        <div class="timeline-body">
-          <p></p>
-        </div>
-      </div>
-    </li>
+     </li>
     <li>
       <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">Silica Screening Test for BacMan 1.5</h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:00 to 11:00 am December 6, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 9:45 am December 6, 2017</small></p>
           <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MES Ramos </small></p>
         </div>
         <div class="timeline-body">
@@ -298,7 +294,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">Binary Evaluation Support (Geothermex Engagement) </h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:00 to 12:00 nn December 6, 2017</small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:45 to 10:30 am December 6, 2017</small></p>
           <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> DMR Sunga </small></p>
         </div>
         <div class="timeline-body">
@@ -322,10 +318,31 @@
           <h4 class="timeline-title">WTM Projects Update</h4>
         </div>
         <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 1:00 to 2:00 pm December 6, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:30 to 11:15 am December 6, 2017</small></p>
              <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> GS Vergara / NM Avila</small></p>
         </div>
      </div>
+    </li>
+
+<!-- Reservoir Simulation -->
+     <li class="timeline-badge">
+          <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
+               <div class="timeline-heading ">
+                    <h3 class="timeline-title"><em>Reservoir Simulation</em></h3>
+               </div>
+          </div>
+     </li>
+    <li>
+      <div class="timeline-badge info"><i class="glyphicon glyphicon-home"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Bacman Reservoir Simulation Update</h4>
+        </div>
+        <div class="timeline-body">
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 12:00 nn December 6, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> JD Villacorte / RN Colina </small></p>
+        </div>
+      </div>
     </li>
 
   </ul>
