--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">CN-3D Chemistry Update</h4>
+          <h4 class="timeline-title">CN-3D Geohemistry Update</h4>
         </div>
         <div class="timeline-body">
             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:30 to 11:15 am December 5, 2017</small></p>
