--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
      <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">WTM Projects Update</h4>
+          <h4 class="timeline-title">BOM Automation Project</h4>
         </div>
         <div class="timeline-body">
              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:30 to 11:15 am December 6, 2017</small></p>
