--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <li class="timeline-inverted">
       <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
         <div class="timeline-heading ">
-          <h3 class="timeline-title"><em>Geochemistry</em></h3>
+          <h3 class="timeline-title"><em>Geochemistry / Geology</em></h3>
         </div>
       </div>
     </li>
@@ -170,6 +170,20 @@
         </div>
       </div>
     </li>
+
+    <li class="timeline-inverted">
+      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">A Structural Perspective on the NDS Tracer Test in BGBU</h4>
+        </div>
+        <div class="timeline-body">
+             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>10:30 to 11:15 am December 5, 2017</small></p>
+             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
+        </div>
+      </div>
+    </li>
+
     <li class="timeline-inverted">
       <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
@@ -177,12 +191,12 @@
           <h4 class="timeline-title">CN-3D Geochemistry Update</h4>
         </div>
         <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:30 to 11:15 am December 5, 2017</small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 12:00 nn December 5, 2017 </small></p>
             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> PB Alvarado</small></p>
         </div>
       </div>
     </li>
-    <li class="timeline-inverted">
+    <!-- <li class="timeline-inverted">
       <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
@@ -193,7 +207,7 @@
             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MM Bibon </small></p>
         </div>
       </div>
-    </li>
+    </li> -->
 
 <!-- RESERVOIR ENGINEERING  -->
     <li class="timeline-badge">
@@ -216,11 +230,11 @@
       </div>
     </li>
 
-<!-- GEOLOGY -->
+<!-- Bacman-1.5 -->
    <li class="timeline-inverted">
      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
        <div class="timeline-heading ">
-         <h3 class="timeline-title"><em>Geology</em></h3>
+         <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
        </div>
      </div>
    </li>
@@ -229,35 +243,15 @@
      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
      <div class="timeline-panel">
        <div class="timeline-heading">
-         <h4 class="timeline-title">A Structural Perspective on the NDS Tracer Test in BGBU</h4>
+         <h4 class="timeline-title">Bacman 1.5 Project Update</h4>
        </div>
        <div class="timeline-body">
             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2:00 to 3:00 pm December 5, 2017</small></p>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
+            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Garcia </small></p>
        </div>
      </div>
    </li>
-<!-- Bacman-1.5 -->
-   <li class="timeline-badge">
-        <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-             <div class="timeline-heading ">
-                  <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
-             </div>
-        </div>
-   </li>
-  <li>
-   <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
-   <div class="timeline-panel">
-      <div class="timeline-heading">
-        <h4 class="timeline-title">Bacman 1.5 Project Update</h4>
-        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3:00 to 4:00 pm December 5, 2017</small></p>
-        <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Garcia </small></p>
-      </div>
-      <div class="timeline-body">
-        <p></p>
-      </div>
-   </div>
-  </li>
+
   </ul>
 </div>
 
@@ -280,9 +274,9 @@
       <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Silica Screening Test for BacMan 1.5</h4>
+          <h4 class="timeline-title">Silica Screening Test for BacMan 1.5 and Process Geochemistry Update</h4>
           <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 9:45 am December 6, 2017</small></p>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MES Ramos </small></p>
+          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MM Bibon </small></p>
         </div>
         <div class="timeline-body">
           <p></p>
